2005-11-30  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/i386/floatmul.c, src/arch/i386/mixaudio16_mmx_prk.c
	src/arch/i386/memcpy_mmx_prk.nasm: fix warnings

	* CMakeLists.txt: gcc should compile in C99 mode

2005-11-30  Sven Panne  <sven.panne@aedion.de>

	* CMakeLists.txt, config-osx.h, configure.ac, src/al_main.c,
	src/arch/linux/lin_dsp.c: Always include capture support, as required by
	OpenAL 1.1.

	* Makefile.am, configure.ac: Cleaned up handling of warning-related
	configure options so we have three now: --enable-warnings (default
	"yes"), --enable-gcc-warnings (default "no"), and --enable-werror
	(default "no").

	* admin/autotools/m4/alut_check_cflags_wall.m4: Added.

2005-11-29  Sven Panne  <sven.panne@aedion.de>

	* admin/RPM/openal.spec: Synched with new directory structure.

	* CMakeLists.txt, Makefile.am, configure.ac, common/Makefile.am:
	Slightly rearranged the common subdirectory.

	* common/include/.cvsignore, common/include/Makefile.am: Added.

	* Makefile.am, configure.ac, include/Makefile.am, src/Makefile.am: We
	"mount" the common headers via a CVS alias module "portable" now.

	* common/.cvsignore, common/Makefile.am: Added.

	* Makefile.am, src/Makefile.am: Added missing files for
	distribution. Still far from perfect, but better.

2005-11-29  Prakash Punnoor <prakash@punnoor.de>
	
	* CMakeLists.txt: Sven missed two lines on clean-up; sync warning-
	flags to configure.ac; al headers now in common

2005-11-29  Sven Panne  <sven.panne@aedion.de>

	* CMakeLists.txt, Makefile.am, admin/.cvsignore, admin/Makefile.am,
	configure.ac: Cleaned up admin directory structure.

	* admin/RPM/openal.spec, admin/RPM/openal.xpm,
	admin/autotools/.cvsignore, admin/autotools/.indent.pro,
	admin/pkgconfig/.cvsignore, admin/pkgconfig/Makefile.am,
	admin/pkgconfig/openal-config.in, admin/pkgconfig/openal.pc.in: Added.

	* admin/.indent.pro, admin/openal-config.in, admin/openal.pc.in,
	admin/openal.spec admin/openal.xpm: Removed.
